# HomeAdmin

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  dependencies.md  limitations.md  privilege-model.md
migrations/: 0001_initial.sql  0002_identity_evidence.sql  0002_unknown_backlog_indices.sql  0003_plans.sql  0004_plan_state_audit.sql  0005_execute.sql  0006_recommendations.sql
src/homeadmin/: __init__.py  cli.py  config.py  logging.py
src/homeadmin/agent/: __init__.py  workflow.py
src/homeadmin/baseline/: __init__.py
src/homeadmin/collectors/: __init__.py  arp_scan.py  nmap.py
src/homeadmin/discovery/: __init__.py  workflow.py
src/homeadmin/drift/: __init__.py  workflow.py
src/homeadmin/execute/: __init__.py  workflow.py
src/homeadmin/models/: __init__.py  observations.py
src/homeadmin/normalizers/: __init__.py  arp_scan.py  nmap.py
src/homeadmin/plans/: __init__.py  workflow.py
src/homeadmin/recommend/: __init__.py  engine.py  models.py
src/homeadmin/reconcile/: __init__.py  identity.py  merge.py  workflow.py
tests/: conftest.py  test_agent_orchestration.py  test_cli_discover_contract.py  test_cli_pipeline.py  test_cli_plans.py  test_cli_smoke.py  test_config_contract.py  test_discovery_workflow.py  test_drift.py  test_drift_workflow.py  test_execute.py  test_module_imports.py  test_normalization.py  test_parsers.py  test_plans.py  test_recommendations.py  test_reconcile_workflow.py  test_reconciliation.py  test_reporting_outputs.py  test_storage_contract.py
(+7 files in other folders)
